--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.64.2",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
+    "swiper": "^10.3.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
